Fixed overflow of #map

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ span {
 
 #map {
   display: block;
-  height: 100%;
+  height: 90%;
   margin-left: 5%;
   margin-right: 5%;
 }
